# shutdown-on-lan

./: .gitignore  Cargo.toml  Dockerfile  README.md  makefile
.github/commands/: build-for-windows.bat
.github/workflows/: build.yml  ci.yml  clippy-nightly.yml  rust.yml
src/: configuration.rs  installer.rs  listener_service.rs  main.rs  windows_listener_service.rs
