[package]
name = "shutdown-on-lan"
version = "0.1.0"
authors = ["Jeremy Massel"]
edition = "2018"
default-run = "shutdown-on-lan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simplelog = "^0.7.4"
systemstat = "0.1.5"
itertools = "0.8.2"
system_shutdown = "3.0.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.7" }
windows-service = "0.2.0"

[target.'cfg(not(windows))'.dependencies]
plist = "1"
dirs = "2.0"

[[bin]]
name = "installer"
path = "src/installer.rs"