[package]
name = "shutdown-on-lan"
version = "0.2.0"
authors = ["Jeremy Massel"]
edition = "2018"
default-run = "shutdown-on-lan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simplelog = "^0.12.2"
systemstat = "0.2.3"
itertools = "0.10.5"
system_shutdown = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
anyhow = "1.0"
thiserror = "1"
exitcode = "1.1.2"
memoize = "0.4.0"

# Fix security warning
time = "^0.3"

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.52" }
windows-service = "0.6.0"
win_etw_macros = "0.1.*"
win_etw_provider = "0.1.*"

[target.'cfg(target_os = "linux")'.dependencies]
serde_ini = "0.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
dirs = "4.0"
whoami = "1"
serde_ini = "0.2.0"
